--- a/.github/workflows/docker-push-fork.yaml
+++ b/.github/workflows/docker-push-fork.yaml
@@ -2,6 +2,7 @@
 name: Docker publish fork
 on:
   push: {branches: [main]}        # build when you change the generator
+  workflow_dispatch:
 permissions: write-all            # needed for GHCR push
 jobs:
   build:
