--- a/.github/workflows/docker-push-fork.yaml
+++ b/.github/workflows/docker-push-fork.yaml
@@ -5,12 +5,16 @@ on:
   workflow_dispatch:
 permissions: write-all            # needed for GHCR push
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: |
-          IMAGE=ghcr.io/${{ github.repository_owner }}/openapi-generator-cli:latest
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker build -t $IMAGE .
-          docker push $IMAGE
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - run: |
+                OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')   # lowercase
+                IMAGE="ghcr.io/${OWNER_LC}/openapi-generator-cli:latest"
+
+                echo "${{ secrets.GITHUB_TOKEN }}" |
+                docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+                docker build -t "$IMAGE" .
+                docker push "$IMAGE"
